--- a/analysis/sleep-disorder-analysis.html
+++ b/analysis/sleep-disorder-analysis.html
@@ -209,59 +209,59 @@ Table&nbsp;1: First rows of dataset with unused columns dropped
 <tbody>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">0</th>
-<td>224</td>
-<td>6.4</td>
-<td>6</td>
-<td>Insomnia</td>
-<td>7</td>
-</tr>
-<tr class="even">
-<th data-quarto-table-cell-role="th">1</th>
-<td>310</td>
+<td>262</td>
 <td>6.6</td>
 <td>7</td>
-<td>Insomnia</td>
-<td>7</td>
-</tr>
-<tr class="odd">
-<th data-quarto-table-cell-role="th">2</th>
-<td>240</td>
-<td>6.4</td>
-<td>6</td>
-<td>Insomnia</td>
-<td>7</td>
-</tr>
-<tr class="even">
-<th data-quarto-table-cell-role="th">3</th>
-<td>207</td>
-<td>7.7</td>
-<td>8</td>
 <td>NaN</td>
-<td>5</td>
-</tr>
-<tr class="odd">
-<th data-quarto-table-cell-role="th">4</th>
-<td>258</td>
-<td>6.6</td>
-<td>7</td>
-<td>Insomnia</td>
 <td>4</td>
 </tr>
 <tr class="even">
-<th data-quarto-table-cell-role="th">5</th>
-<td>57</td>
+<th data-quarto-table-cell-role="th">1</th>
+<td>286</td>
+<td>6.0</td>
+<td>6</td>
+<td>Sleep Apnea</td>
+<td>8</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">2</th>
+<td>293</td>
+<td>6.1</td>
+<td>6</td>
+<td>Sleep Apnea</td>
+<td>8</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">3</th>
+<td>41</td>
 <td>7.7</td>
 <td>7</td>
 <td>NaN</td>
 <td>6</td>
 </tr>
 <tr class="odd">
-<th data-quarto-table-cell-role="th">6</th>
-<td>212</td>
-<td>7.8</td>
+<th data-quarto-table-cell-role="th">4</th>
+<td>32</td>
+<td>6.4</td>
+<td>5</td>
+<td>Insomnia</td>
+<td>7</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">5</th>
+<td>93</td>
+<td>7.5</td>
 <td>8</td>
 <td>NaN</td>
 <td>5</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">6</th>
+<td>48</td>
+<td>7.8</td>
+<td>7</td>
+<td>NaN</td>
+<td>6</td>
 </tr>
 </tbody>
 </table>
@@ -298,59 +298,59 @@ Table&nbsp;2: First rows of dataset with null values replaced
 <tbody>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">0</th>
-<td>244</td>
-<td>6.5</td>
-<td>7</td>
-<td>Insomnia</td>
-<td>4</td>
+<td>337</td>
+<td>8.4</td>
+<td>9</td>
+<td>No Disorder</td>
+<td>3</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">1</th>
-<td>121</td>
-<td>7.2</td>
-<td>8</td>
+<td>250</td>
+<td>6.5</td>
+<td>6</td>
 <td>No Disorder</td>
-<td>4</td>
+<td>7</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">2</th>
-<td>345</td>
-<td>8.2</td>
-<td>9</td>
-<td>Sleep Apnea</td>
-<td>3</td>
+<td>262</td>
+<td>6.6</td>
+<td>7</td>
+<td>No Disorder</td>
+<td>4</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">3</th>
-<td>51</td>
-<td>7.5</td>
+<td>282</td>
+<td>6.1</td>
+<td>6</td>
+<td>Sleep Apnea</td>
 <td>8</td>
-<td>No Disorder</td>
-<td>3</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">4</th>
-<td>140</td>
-<td>7.1</td>
-<td>8</td>
-<td>No Disorder</td>
-<td>5</td>
+<td>220</td>
+<td>6.5</td>
+<td>6</td>
+<td>Sleep Apnea</td>
+<td>7</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">5</th>
-<td>301</td>
-<td>8.5</td>
-<td>9</td>
+<td>205</td>
+<td>7.6</td>
+<td>8</td>
 <td>No Disorder</td>
-<td>3</td>
+<td>4</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">6</th>
-<td>5</td>
-<td>5.9</td>
-<td>4</td>
-<td>Sleep Apnea</td>
-<td>8</td>
+<td>60</td>
+<td>7.7</td>
+<td>7</td>
+<td>No Disorder</td>
+<td>6</td>
 </tr>
 </tbody>
 </table>
@@ -618,36 +618,36 @@ Table&nbsp;5: Baseline model performance
 <tbody>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">0</th>
-<td>0.000762</td>
-<td>0.000415</td>
+<td>0.000766</td>
+<td>0.000425</td>
 <td>0.20000</td>
 <td>0.200837</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">1</th>
-<td>0.000461</td>
-<td>0.000408</td>
+<td>0.000486</td>
+<td>0.000447</td>
 <td>0.20000</td>
 <td>0.200837</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">2</th>
-<td>0.000463</td>
-<td>0.000374</td>
+<td>0.000485</td>
+<td>0.000381</td>
 <td>0.20000</td>
 <td>0.200837</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">3</th>
-<td>0.000464</td>
-<td>0.000366</td>
+<td>0.000483</td>
+<td>0.000380</td>
 <td>0.20000</td>
 <td>0.200837</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">4</th>
-<td>0.000608</td>
-<td>0.000475</td>
+<td>0.000517</td>
+<td>0.000373</td>
 <td>0.20339</td>
 <td>0.200000</td>
 </tr>
@@ -695,8 +695,8 @@ Table&nbsp;6: Cross-validation results
 <tbody>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">0</th>
-<td>0.005807</td>
-<td>0.003170</td>
+<td>0.006473</td>
+<td>0.002951</td>
 <td>-0.966525</td>
 <td>-0.939745</td>
 <td>0.735982</td>
@@ -704,8 +704,8 @@ Table&nbsp;6: Cross-validation results
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">1</th>
-<td>0.004152</td>
-<td>0.002283</td>
+<td>0.004320</td>
+<td>0.002603</td>
 <td>-1.115303</td>
 <td>-0.901239</td>
 <td>0.600846</td>
@@ -713,8 +713,8 @@ Table&nbsp;6: Cross-validation results
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">2</th>
-<td>0.003766</td>
-<td>0.002115</td>
+<td>0.003879</td>
+<td>0.002263</td>
 <td>-0.941442</td>
 <td>-0.952310</td>
 <td>0.693674</td>
@@ -722,8 +722,8 @@ Table&nbsp;6: Cross-validation results
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">3</th>
-<td>0.003547</td>
-<td>0.002355</td>
+<td>0.004127</td>
+<td>0.002344</td>
 <td>-0.769661</td>
 <td>-0.989587</td>
 <td>0.789710</td>
@@ -731,8 +731,8 @@ Table&nbsp;6: Cross-validation results
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">4</th>
-<td>0.003610</td>
-<td>0.002228</td>
+<td>0.004506</td>
+<td>0.002507</td>
 <td>-1.068692</td>
 <td>-0.914836</td>
 <td>0.641952</td>
